Alembic export with multires and hair crash blender #51144

Closed
opened 2017-04-07 14:20:57 +02:00 by Francois Rimasson · 7 comments

System Information

Operating system and graphics card
Windows 7 pro SP 1
Geforce GTX 980

Blender Version
2.78c and 2.78.4 hash 5ce120b date : 2017-03-27

Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Export file as alembic crash blender.
You can find the file here : name

**System Information** Operating system and graphics card Windows 7 pro SP 1 Geforce GTX 980 **Blender Version** 2.78c and 2.78.4 hash 5ce120b date : 2017-03-27 Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Export file as alembic crash blender. You can find the file here : [name ](https://we.tl/xAfQiLgeNg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FrancoisRimasson

Added subscriber: @FrancoisRimasson
Sybren A. Stüvel was assigned by Aaron Carlisle 2017-04-11 00:29:16 +02:00

Please don't leave the example text in the issue description, but edit it to your needs. Make sure that the description is understandable, and doesn't contain any useless text.

I've downloaded the file from wetransfer and attached it here: alembic_crash_export.zip.
Please attach example files directly to bug reports next time (you can just drag & drop them into the description).

Please don't leave the example text in the issue description, but edit it to your needs. Make sure that the description is understandable, and doesn't contain any useless text. I've downloaded the file from wetransfer and attached it here: [alembic_crash_export.zip](https://archive.blender.org/developer/F542319/alembic_crash_export.zip). Please attach example files directly to bug reports next time (you can just drag & drop them into the description).

@FrancoisRimasson this file is rather heavy. Can you create a minimal, simple, light example that shows the issue? It'll speed up development & fixing.

@FrancoisRimasson this file is rather heavy. Can you create a minimal, simple, light example that shows the issue? It'll speed up development & fixing.

I've traced the problem to missing support for "Simple" child hairs (apparently only "interpolated" is supported at the moment). D2638 should fix this.

I've traced the problem to missing support for "Simple" child hairs (apparently only "interpolated" is supported at the moment). [D2638](https://archive.blender.org/developer/D2638) should fix this.

This issue was referenced by 6ed15c5a41

This issue was referenced by 6ed15c5a41130b55cb57a43a8a9470a91d38c3d5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51144
No description provided.